--- a/res/popup.html
+++ b/res/popup.html
@@ -43,12 +43,20 @@
             </table>
         </div>
 
-        <button id="btnSave">Save</button>
-        <button id="btnExport">내보내기</button>
+        <div>
+            <lable>게시판차단</lable>
+            <input type="text" id="bbsBlock"/>
+            <lable style="display:none">제목차단</lable>
+            <input style="display:none" type="text" id="titleBlock"/>
+        </div>
+        <div>
+            <button id="btnSave">Save</button>
+            <button id="btnExport">내보내기</button>
         
-        <lable>불러오기</lable>
-        <input type="file" id="inputElement" style="visible:hidden"/>
-        <script src="jquery.min.js"></script>
-        <script src="popup.js"></script>
+            <lable>불러오기</lable>
+            <input type="file" id="inputElement" style="display:none"/>
+            <script src="jquery.min.js"></script>
+            <script src="popup.js"></script>
+        </div>
     </body>
 </html>
