--- a/res/popup.html
+++ b/res/popup.html
@@ -54,7 +54,7 @@
             <button id="btnExport">내보내기</button>
         
             <lable>불러오기</lable>
-            <input type="file" id="inputElement" style="display:none"/>
+            <input type="file" id="inputElement" />
             <script src="jquery.min.js"></script>
             <script src="popup.js"></script>
         </div>
