제목 키워드 필터링 기능 추가.

--- a/res/popup.html
+++ b/res/popup.html
@@ -46,8 +46,8 @@
         <div>
             <lable>게시판차단</lable>
             <input type="text" id="bbsBlock"/>
-            <lable style="display:none">제목차단</lable>
-            <input style="display:none" type="text" id="titleBlock"/>
+            <lable>제목차단</lable>
+            <input type="text" id="titleBlock"/>
         </div>
         <div>
             <button id="btnSave">Save</button>
